// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> hidden renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  hidden={true}
  m={0}
  mb={3}
  textStyle="label"
>
  Hello world
</StyledComponent>
`;

exports[`<Label /> renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  hidden={false}
  m={0}
  mb={3}
  textStyle="label"
>
  Hello world
</StyledComponent>
`;
